# tuutal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: python.yml  rust.yml  test-python.yml  wheels_ubuntu.yml
benches/: bracket.rs  brent_opt.rs  steepest_descent.rs
py-tuutal/: .gitignore  Cargo.toml  environment.yml  pyproject.toml
py-tuutal/src/: error.rs  first_order.rs  interface.rs  lib.rs  traits.rs  zero_order.rs
py-tuutal/tests/: test_zero_order.py  zero_order.py
src/: error.rs  first_order.rs  lib.rs  scalar.rs  steepest_descent.rs  traits.rs  utils.rs  zero_order.rs
src/first_order/: adaptive_descent.rs  macros.rs  steepest_descent.rs
src/first_order/adaptive_descent/: adadelta.rs  adagrad.rs
src/first_order/steepest_descent/: adadelta.rs  adagrad.rs  armijo.rs  powell_wolfe.rs  unit_test.rs
src/steepest_descent/: unit_test.rs
src/zero_order/: nelder_mead.rs  powell.rs  scalar.rs
src/zero_order/nelder_mead/: unit_test.rs
src/zero_order/powell/: unit_test.rs
src/zero_order/scalar/: root.rs
tests/: quickckeck.rs
