[package]
name = "tuutal"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = "0.15.6"
thiserror = "1.0.61"
# num-traits = "0.2.19"


[dev-dependencies]
quickcheck = "1.0.0"


[dependencies.num-traits]
version = "0.2.19"
default-features = false
# features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`