[package]
name = "tuutal"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = { version = "0.15.6", default-features = false }
# thiserror = "1.0.61"
thiserror-no-std = "2.0.2"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }


[dev-dependencies]
quickcheck = "1.0.0"
